--- a/Samsung/Samsung.html
+++ b/Samsung/Samsung.html
@@ -125,8 +125,9 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
-          <video autoplay muted loop>
-            <source src="images/ZFOLD.mp4" class="d-block w-100" alt="...">
+          <video autoplay muted loop style="
+          width: 100%;">
+            <source src="images/ZFOLD.mp4" class="d-block w-110" alt="...">
           </video>
           <div class="zfold">
             <h1>Z Fold4/Flip4 </h1>
@@ -481,26 +482,46 @@
       <div class="item" data-hash="QLED8K" data-merge="6">
         <img src="images/section3/Neo_QLED_8K_1440x810 (1).jpg" alt="" style="
                 width: 69%;
-                height: 575px;
+                height: 557px;
                 margin: auto"/>
+                <div class="neo">
+                  <h2>Neo QLED 8K</h2>
+                  <p>Staring 19670/Month <br> Get 16500 Off With cashbacks and appvoucher</p>
+                  <button class="btn-dark">BuyNow</button>
+                </div>
       </div>
       <div class="item" data-hash="QLED4K" data-merge="6">
         <img src="images/section3/QLED-4K_1440x810.webp" alt="" style="
         width: 69%;
-        height: 575px;
+        height: 557px;
         margin: auto"/>
+        <div class="neo1">
+          <h2>Neo QLED 4K</h2>
+          <p>Staring 19670/Month <br> Get 16500 Off With cashbacks and appvoucher</p>
+          <button class="btn-dark">BuyNow</button>
+        </div>
       </div>
       <div class="item" data-hash="4KUHD" data-merge="6">
         <img src="images/section3/Crystal-4K-43AUE65-1440x810.jpg" alt="" style="
         width: 69%;
-        height: 575px;
+        height: 557px;
         margin: auto"/>
+        <div class="neo2">
+          <h2>Cryastal 4K UHD</h2>
+          <p>Staring 19670/Month <br> Get 16500 Off With cashbacks and appvoucher</p>
+          <button class="btn-dark">BuyNow</button>
+        </div>
       </div>
       <div class="item" data-hash="FRAME" data-merge="6">
         <img src="images/section3/The_Frame_Bezel_pc.webp" alt="" style="
         width: 69%;
-        height: 575px;
+        height: 557px;
         margin: auto"/>
+        <div class="neo3">
+          <h2>The Frame QLED 8K</h2>
+          <p>Staring 19670/Month <br> Get 16500 Off With cashbacks and appvoucher</p>
+          <button class="btn-dark">BuyNow</button>
+        </div>
       </div>
     </div>
   </section>
@@ -520,36 +541,136 @@
     <div class="owl-carousel owl-theme">
       <div class="item" data-hash="20YEARS" data-merge="6">
         <img src="images/section4/Product_Marketing_Banner_1440x810.jpg" alt="" style="
-                width: 69%;
-                height: 575px;
-                margin: auto"/>
+                   width: 69%;
+                   height: 719px;
+                   margin: auto;
+                   margin-top: -94px;"/>
+                   <div class="pro">
+                      <h1>Innovation Backed <br> By Reliability</h1>
+                      <p>Buy Washing Machine</p>
+                      <button class="btn-dark">Buy Refrigerator</button>
+                   </div>
       </div>
       <div class="item" data-hash="AIR" data-merge="6">
         <img src="images/section4/Air_Purifier_1440x810.webp" alt="" style="
         width: 69%;
-        height: 575px;
-        margin: auto"/>
+                   height: 719px;
+                   margin: auto;
+                   margin-top: -94px;"/>
+                   <div class="pro">
+                    <h1>Air PURIFIRE</h1>
+                    <p>Starting ₹ 22275* <br> Incl. ₹ 4725* off with cashback &amp; app voucher</p>
+                    <button class="btn-dark">Buy Air Purifier</button>
+                 </div>
       </div>
       <div class="item" data-hash="AI" data-merge="6">
         <img src="images/section4/AI_Ecobubble_1440x810.webp" alt="" style="
-        width: 69%;
-        height: 575px;
-        margin: auto"/>
+         width: 69%;
+                   height: 719px;
+                   margin: auto;
+                   margin-top: -94px;"/> 
+                    <div class="pro1">
+                    <h1>AI Ecobubble™</h1>
+                    <p>Starting ₹ 22275* <br> Incl. ₹ 4725* off with cashback &amp; app voucher</p>
+                    <button class="btn-dark">Buy Air Purifier</button>
+                 </div>
       </div>
       <div class="item" data-hash="ECO" data-merge="6">
         <img src="images/section4/Top_Load_Ecobubble_1440x810.webp" alt="" style="
-        width: 69%;
-        height: 575px;
-        margin: auto"/>
+                   width: 69%;
+                   height: 719px;
+                   margin: auto;
+                   margin-top: -94px;"/>
+                    <div class="pro2">
+                      <h1>Top Load With Wifi</h1>
+                      <p>Starting ₹ 22275* <br> Incl. ₹ 4725* off with cashback &amp; app voucher</p>
+                      <button class="btn-dark">Buy Air Purifier</button>
+                   </div>
       </div>
       <div class="item" data-hash="SPACE" data-merge="6">
         <img src="images/section4/Side_by_Side_Ref_1440x810.webp" alt="" style="
-        width: 69%;
-        height: 575px;
-        margin: auto"/>
+                   width: 69%;
+                   height: 719px;
+                   margin: auto;
+                   margin-top: -94px;"/>
+                    <div class="pro3">
+                      <h1>SpaceMax™ Side by side Refrigerator</h1>
+                      <p>Starting ₹ 22275* <br> Incl. ₹ 4725* off with cashback &amp; app voucher</p>
+                      <button class="btn-dark">Buy Air Purifier</button>
+                   </div>
       </div>
     </div>
   </section>
+  <section id="content7">
+    <div class="explore7">
+      <h1>Explore #DoWhatYouCant</h1>
+    </div>
+    <div class="explore6">
+      <div class="eximg7">
+        <img id="changeImage" class="changeImage" src="images/section7.webp" alt="">
+      </div>
+      <div class="excontent7">
+        <ul>
+          <li class="tips">
+          <h5>01 Tips for Navigating Big Life Changes
+            Learn more</h5> 
+          </li>
+          <li class="feel">
+          <h5> 02 Feel Free to Freestyle</h5> 
+          </li>
+            <li class="host">
+              <h5> 03 Hosting Tips to Alleviate Holiday Stress</h5> 
+            </li>
+            <li class="meet1">
+              <h5 > 04 Meet G·NUSMAS, the curious extraterrestrial</h5> 
+            </li>
+            <li class="fest1">
+              <h5 >  05 India's Festive Season Purchase Latest Smartphones</h5> 
+            </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <script>
+    $("ul li:nth-child(1)").hover(
+function() {
+$('#changeImage').attr('src', 'https://images.samsung.com/is/image/samsung/assets/in/p6_gro1/p6_initial_explore_detail/life-hacks/mx0147_tips-for-navigating-big-life-changes/mx0147_home-explore-banner_pc_684x684.jpg?$684_684_PNG$');
+}
+);
+$("ul li:nth-child(2)").hover(
+function() {
+$('#changeImage').attr('src', 'https://images.samsung.com/is/image/samsung/assets/in/p6_gro1/p6_initial_explore_detail/entertainment/vd0040_explore_feel-free-to-freestyle/vd0026_home-explore-banner_pc_684x684.jpg?$684_684_PNG$');
+}
+);
+
+$("ul li:nth-child(3)").hover(
+function() {
+$('#changeImage').attr('src', 'https://images.samsung.com/is/image/samsung/assets/in/p6_gro1/p6_initial_explore_detail/food-home/da0050-3-hosting-tips-to-alleviate-holiday-stress/da0050_home_explore-banner_pc_684x684.jpg?$684_684_PNG$');
+}
+);
+$("ul li:nth-child(4)").hover(
+  function() {
+    $('#changeImage').attr('src', 'https://images.samsung.com/is/image/samsung/assets/in/p6_gro1/p6_initial_explore_detail/brand/global0028_explore_meet-g-nusmas/global0028_home-explore-banner_pc_684x684.jpg?$684_684_PNG$');
+  }
+);
+$("ul li:nth-child(5").hover(
+  function() {
+    $('#changeImage').attr('src', 'https://images.samsung.com/is/image/samsung/assets/in/p6_gro1/p6_initial_explore_detail/200vs100-images/Banner_Desktop_684x684.jpg?$684_684_PNG$');
+  }
+);
+
+</script>
+
+<section id="content8">
+  <div class="look7">
+    <h1>Looking for something else?</h1>
+     <input type="text" placeholder="Search Keyword"> <span class="fa-solid fa-magnifying-glass"></span>
+     <br>
+     <button>Galaxy Z Fold4</button> <button>Galaxy Z Flip4</button> <button>QLED8K</button> 
+     <BUtton>UHDTV's</BUtton> <button>Ecobubble™</button> <br> <button>Cuard Maestro</button> <button>Smart Monitors</button>
+  </div>
+</section>
 </body>
 
 </html>
